--- a/README
+++ b/README
@@ -1,9 +1,3 @@
-This is a friendly fork from http://svn.tls.cena.fr/svn/ivy/ivy-python.
-
-The main goal is to port to newer python version, and in particular to
-python3.x (see python3 branch).
-
-
 Ivy: a lightweight software bus
 -------------------------------
 
@@ -11,9 +5,4 @@ Ivy is a lightweight software bus for quick-prototyping protocols. It allows
 applications to broadcast information through text messages, with a
 subscription mechanism based on regular expressions.
 
-
-Supported versions of python are: 2.3 and newer
-
-!!! Warning !!!  Version 2.0 broke backward compatibility!  If you're
-upgrading from ivy-python 1.x, be sure to read the v2.0 compatibility notes in
-ivy/__init__.py (also in: API/index.html)
+Tested on Python 2.7 and 3.4
